# COBRA-k

./: .gitignore  README.md  TODO.md  format_code.sh  main_paper_calculations.py  pyproject.toml
cobrak/: _community.py  _evolution2.py  alphafold_db_functionality.py  brenda_functionality.py  cobrapy_model_functionality.py  constants.py  dataclasses.py  equilibrator_functionality.py  evolution.py  example_models.py  io.py  lps.py  metanetx_functionality.py  model_instantiation.py  molmass_functionality.py  nlps.py  plotting.py  printing.py  pyomo_functionality.py  sabio_rk_functionality.py  spreadsheet_functionality.py  thermokinetic_data_retrieval.py  uniprot_functionality.py  utilities.py
cobrak/data/: iCH360_cobrak.json
docs/: add_data.md  construct_own.md  evolutionary.md  index.md  installation.md  lps.md  milps.md  model_from_scratch.md  model_io.md  nlps.md  paper_reproduction.md  parameter_corrections.md  utilities.md
examples/iCH360/: B_prepare_external_data_for_cobrak.py  C_get_cobrak_model.py  D_thermodynamic_bottleneck_analysis.py  E_run_filling_and_precalibration_variability_analysis.py  H_run_calculations.py  I_run_comparative_ecTFBAs_and_ecTFVAs.py  J_efficiency_factors_histogram.py  K_glcuptake_plot.py  L_perform_enzyme_and_metabolite_correction_with_plot.py  R_plot_variation_results.py  S_create_further_spreadsheets.py
examples/iCH360/RESULTS_GLCUPTAKE_DIFFERENT_MAXCONCSUMS/: best_evolution_result_1_maxconcsum0.1_used_time.json  (+285 more)
examples/toymodel/: run_toymodel_calculations.py
tests/: test_pyomo_functionality.py  test_uniprot_functionality.py
(+321 files in other folders)
